SSDM-13479: Merge SSDM-12986